# gopro-chaptered-video-assembler

./: .gitattributes  .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: rust.yml
assets/: Example.drawio
docs/: release.md  testing.md
src/: cli.rs  ffmpeg.rs  filesystem.rs  gopro.rs  logging.rs  main.rs  multichapter_merging.rs  printing.rs
tests/: integration_test.rs  setup-test.sh
