[package]
name = "gopro-util"
version = "0.1.0"
edition = "2021"
author = "Aaron Lichtman"
about = "Concatenate all sequential GoPro video files in a directory"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.0"
log = "0.4.17"
simplelog = "0.12.1"
uuid = { version = "1.3.0", features = ["v4"] }
xdg = "2.4.1"

[toolchain]
channel = "nightly"
