[package]
name = "gopro-chaptered-video-assembler"
version = "0.5.1"
edition = "2021"
authors = ["Aaron Lichtman <aaronlichtman@gmail.com>"]
description = "Assembles all chaptered GoPro video files in a directory into 'complete' files."
license-file = "LICENSE"
homepage = "https://github.com/alichtman/gopro-chaptered-video-assembler"
repository = "https://github.com/alichtman/gopro-chaptered-video-assembler"
readme = "README.md"
keywords = ["gopro", "video", "assembler", "chaptered", "ffmpeg"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.0"
filetime = "0.2.20"
fs_extra = "1.3.0"
log = "0.4.17"
merkle_hash = "3.6.1"
mp4-merge = "0.1.7"
normpath = "1.1.0"
simplelog = "0.12.1"
uuid = { version = "1.3.0", features = ["v4"] }
xdg = "2.4.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
